# autocompiler

./: README.md  pyproject.toml
.spyproject/config/backups/: workspace.ini.bak
autocompiler/: __init__.py  main.py
examples/: example_monte_carlo.py  example_split.py
examples/__pycache__/: example_cache.arr_by_gap-45.py311.1.nbc  example_cache.arr_by_gap-45.py311.nbi  example_cache.autocompiler_monte_carlo_pi-26.py311.1.nbc  example_cache.autocompiler_monte_carlo_pi-26.py311.nbi  example_cache.numba_monte_carlo_pi-16.py311.1.nbc  example_cache.numba_monte_carlo_pi-16.py311.nbi  example_cache.split_arr_by_gap-118.py311.1.nbc  example_cache.split_arr_by_gap-118.py311.nbi  example_monte_carlo.autocompiler_monte_carlo_pi-28.py311.1.nbc  example_monte_carlo.autocompiler_monte_carlo_pi-28.py311.nbi  example_split.autocompiler_split_arr-40.py311.1.nbc  example_split.autocompiler_split_arr-40.py311.nbi  example_split.autocompiler_split_arr-43.py311.1.nbc  example_split.autocompiler_split_arr-43.py311.nbi
